# mc-clone-gl

./: CMakeLists.txt  Camera.cpp  Camera.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  ShadowFramebuffer.cpp  ShadowFramebuffer.hpp  Textures.cpp  Textures.hpp  World.cpp  World.hpp  frustum.cpp  frustum.hpp  light.cpp  light.hpp  main.cpp  noise.cpp  noise.hpp  settings.cpp  settings.hpp  terrain_gen.cpp  terrain_gen.hpp  voxel_engine.cpp  voxel_engine.hpp  voxel_handler.cpp  voxel_handler.hpp
glad/: glad.c  glad.h
meshes/: chunk_mesh.cpp  chunk_mesh.hpp  chunk_mesh_builder.cpp  chunk_mesh_builder.hpp  cloud_mesh.cpp  cloud_mesh.hpp  cube_mesh.cpp  cube_mesh.hpp  quad_mesh.cpp  quad_mesh.hpp
shaders/: chunk.frag  chunk.vert  chunk1.frag  chunk1.vert  chunk_chat.frag  chunk_chat.vert  chunk_chat_bak.vert  chunk_shadow.frag  chunk_shadow.vert  shadow_map.vert  voxel_marker.frag
world_objects/: VoxelMarker.cpp  VoxelMarker.hpp  chunk.cpp  chunk.hpp  cloud.cpp  cloud.hpp  water.cpp  water.hpp
